objects/blng__BillingRule__c.object
<CustomObject>
    <fields>
        <fullName>blng__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__AmendmentBillCycleDateAlignment__c</fullName>
        <label>Amendment Bill Cycle Date Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__AmendmentAlignment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__GenerateInvoices__c</fullName>
        <label>Generate Invoice</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__GenerateInvoice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__InitialBillingTrigger__c</fullName>
        <label>Initial Billing Trigger</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InitialBillingTrigger</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__PartialPeriodTreatment__c</fullName>
        <inlineHelpText>Combine a partial billing period with the previous full period when creating an invoice line, or leave the partial period as a separate invoice line.</inlineHelpText>
        <label>Partial Period Treatment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PartialPeriodTreatment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__PeriodTreatmentForBTDO__c</fullName>
        <inlineHelpText>Applies only when an order product has a Bill Through Date Override (BTDO) value during a billing cycle. Combine a partial billing period with the previous full period when creating an invoice line, or leave the partial period as a separate invoice line.</inlineHelpText>
        <label>Period Treatment for BTDO</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PeriodTreatmentForBTDO</valueSetName>
        </valueSet>
    </fields>
    <label>Billing Rule</label>
    <listViews>
        <fullName>blng__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>